# Ex1_task2

./: Bfs.h  CMakeLists.txt  a.out  main.cpp
Tests/: BfsTest.cpp  GridTest.cpp
